MyDemoOrg/force-app/main/default/objects/Opportunity/fields/BBCRM__Discount__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__Discount__c</fullName>
    <label>Discount</label>
    <length>20</length>
    <type>Text</type>
</CustomField>