MyDemoOrg/force-app/main/default/objects/Opportunity/fields/BBCRM__Grand_Total__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__Grand_Total__c</fullName>
    <label>Grand Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>