MyDemoOrg/force-app/main/default/objects/Opportunity/fields/BBCRM__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__Opportunity__c</fullName>
    <label>Opportunity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>