MyDemoOrg/force-app/main/default/objects/Opportunity/fields/BBCRM__Tax__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__Tax__c</fullName>
    <label>Tax</label>
    <length>20</length>
    <type>Text</type>
</CustomField>