MyDemoOrg/force-app/main/default/objects/Opportunity/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>By Opportunity</fullName>
            </value>
            <value>
                <fullName>By Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>