MyDemoOrg/force-app/main/default/objects/Opportunity/fields/Interested_Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Interested_Product_Category__c</fullName>
    <label>Interested Product Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Type_Values</valueSetName>
    </valueSet>
</CustomField>