MyDemoOrg/force-app/main/default/objects/Opportunity/fields/IsClosed__c.field-meta.xml
<CustomField>
    <fullName>IsClosed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This Checkbox is selected when the opportunity is closed.</description>
    <inlineHelpText>States an opportunity closed.</inlineHelpText>
    <label>IsClosed</label>
    <type>Checkbox</type>
</CustomField>