MyDemoOrg/force-app/main/default/objects/Opportunity/fields/Sample_Formula_field__c.field-meta.xml
<CustomField>
    <fullName>Sample_Formula_field__c</fullName>
    <formula>$Setup.TempCustomSetting__c.Picklist_mirrir__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sample Formula field</label>
    <type>Text</type>
</CustomField>