MyDemoOrg/force-app/main/default/objects/Opportunity/fields/Sample_Text_area_field__c.field-meta.xml
<CustomField>
    <fullName>Sample_Text_area_field__c</fullName>
    <label>Sample Text area field</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>