MyDemoOrg/force-app/main/default/objects/Opportunity/recordTypes/General_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>General_Opportunity</fullName>
    <active>true</active>
    <businessProcess>General Sales Opportunity</businessProcess>
    <label>General Opportunity</label>
</RecordType>