MyDemoOrg/force-app/main/default/objects/Opportunity/recordTypes/ISV_Partner_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>ISV_Partner_Opportunity</fullName>
    <active>true</active>
    <businessProcess>ISV Partner</businessProcess>
    <label>ISV Partner Opportunity</label>
</RecordType>