MyDemoOrg/force-app/main/default/objects/Opportunity/validationRules/Close_Date_Alert.validationRule-meta.xml
<ValidationRule>
    <fullName>Close_Date_Alert</fullName>
    <active>true</active>
    <errorConditionFormula>IF(  NOT(IsClosed ) ,  CloseDate  &lt;  TODAY() , false)</errorConditionFormula>
    <errorMessage>Hey McFly, unless you are planning to go back in time, please update your close date&apos;</errorMessage>
</ValidationRule>